Make MR Jar integrity checks pass